fixed map markers overlapping; updated map info window styles

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1669,96 +1669,110 @@ body.mobile-menu-box-active .header {
 }
 .map-container {
 	.marker-label-wrapper {
-		width: 38px;
-		height: 38px;
-		border-radius: 50%;
-		background-color: #FFFFFF;
+		position: relative;
+		width: 56px;
+		height: 69px;
 
-		.marker-label-container {
-			width: 100%;
-			height: 100%;
-			position: relative;
+		.marker-icon-holder {
+			width: 56px;
+			height: 69px;
+			background-image: url("data:image/svg+xml,%3Csvg class='marker-icon-svg' xmlns='http://www.w3.org/2000/svg' viewBox='-28.0446 -68 56.087 70'%3E%3Cpath d='M 0 -66 C 7.1888 -65.9916 13.6965 -63.0419 18.409 -58.2752 C 23.1174 -53.5127 26.0333 -46.936 26.0424 -39.6685 C 25.9554 -22 8.5476 -5.6884 3.1677 -1.1576 C 2.2488 -0.3855 1.123 0 -0.0024 0 C -1.1279 0 -2.2537 -0.3855 -3.1728 -1.1578 C -8.5601 -5.688 -26.0446 -21.8847 -26.0446 -39.667 C -26.0363 -46.9338 -23.1206 -53.5112 -18.4122 -58.2742 C -13.6997 -63.0415 -7.1915 -65.9916 0 -66 Z' stroke='%23FFFFFF' stroke-width='2' fill='%23009C90' opacity='1' /%3E%3C/svg%3E");
+		}
+		.marker-label-holder {
+			position: absolute;
+			top: 9px;
+			left: 9px;
+			width: 38px;
+			height: 38px;
+			border-radius: 50%;
+			background-color: #FFFFFF;
 
-			.marker-label-line {
-				width: 1px;
-				height: 24px;
-				background-color: rgba(24, 24, 22, 0.5);
-				transform: rotate(45deg);
-				position: absolute;
-				top: 9px;
-				left: 21px;
-			}
-			.marker-label-text-wrapper {
+			.marker-label-container {
 				width: 100%;
 				height: 100%;
 				position: relative;
-				color: $textBlackColor;
 
-				.marker-label-available-num {
+				.marker-label-line {
+					width: 1px;
+					height: 24px;
+					background-color: rgba(24, 24, 22, 0.5);
+					transform: rotate(45deg);
 					position: absolute;
-					font-family: $FilsonProBold;
-					font-size: 18px;
-					letter-spacing: 0.6px;
-					line-height: 18px;
-					left: 9px;
-					top: 6px;
-
-					&.num-of-symbols_2 {
-						font-size: 15px;
-						left: 5px;
-						top: 5px;
-					}
-					&.num-of-symbols_3 {
-						font-size: 13px;
-						transform: rotate(-45deg);
-						left: 4px;
-						letter-spacing: -0.5px;
-						top: 8px;
-					}
-					&.num-of-symbols_4, &.num-of-symbols_5 {
-						transform: rotate(-45deg);
-						letter-spacing: -0.5px;
-						left: 4px;
-						top: 8px;
-					}
-					&.num-of-symbols_4 {
-						font-size: 11px;
-					}
-					&.num-of-symbols_5 {
-						font-size: 9px;
-					}
+					top: 9px;
+					left: 21px;
 				}
-				.marker-label-total-num {
-					position: absolute;
-					font-family: $FilsonProRegular;
-					font-size: 11px;
-					letter-spacing: 0.37px;
-					line-height: 11px;
-					bottom: 6px;
-					right: 8px;
+				.marker-label-text-wrapper {
+					width: 100%;
+					height: 100%;
+					position: relative;
+					color: $textBlackColor;
 
-					&.num-of-symbols_2 {
-						right: 4px;
-						bottom: 4px;
-						font-size: 10px;
+					.marker-label-available-num {
+						position: absolute;
+						font-family: $FilsonProBold;
+						font-size: 18px;
+						letter-spacing: 0.6px;
+						line-height: 18px;
+						left: 9px;
+						top: 6px;
+
+						&.num-of-symbols_2 {
+							font-size: 15px;
+							left: 5px;
+							top: 5px;
+						}
+						&.num-of-symbols_3 {
+							font-size: 13px;
+							transform: rotate(-45deg);
+							left: 4px;
+							letter-spacing: -0.5px;
+							top: 8px;
+						}
+						&.num-of-symbols_4, &.num-of-symbols_5 {
+							transform: rotate(-45deg);
+							letter-spacing: -0.5px;
+							left: 4px;
+							top: 8px;
+						}
+						&.num-of-symbols_4 {
+							font-size: 11px;
+						}
+						&.num-of-symbols_5 {
+							font-size: 9px;
+						}
 					}
-					&.num-of-symbols_3 {
-						letter-spacing: -0.5px;
-						font-size: 9px;
-						transform: rotate(-45deg);
-						right: 3px;
-					}
-					&.num-of-symbols_4, &.num-of-symbols_5 {
-						transform: rotate(-45deg);
-						letter-spacing: -0.5px;
-						right: 1px;
-						bottom: 5px;
-					}
-					&.num-of-symbols_4 {
-						font-size: 8px;
-					}
-					&.num-of-symbols_5 {
-						font-size: 7px;
+					.marker-label-total-num {
+						position: absolute;
+						font-family: $FilsonProRegular;
+						font-size: 11px;
+						letter-spacing: 0.37px;
+						line-height: 11px;
+						bottom: 6px;
+						right: 8px;
+
+						&.num-of-symbols_2 {
+							right: 4px;
+							bottom: 4px;
+							font-size: 10px;
+						}
+						&.num-of-symbols_3 {
+							letter-spacing: -0.5px;
+							font-size: 9px;
+							transform: rotate(-45deg);
+							right: 3px;
+						}
+						&.num-of-symbols_4, &.num-of-symbols_5 {
+							transform: rotate(-45deg);
+							letter-spacing: -0.5px;
+							right: 1px;
+							bottom: 5px;
+						}
+						&.num-of-symbols_4 {
+							font-size: 8px;
+						}
+						&.num-of-symbols_5 {
+							font-size: 7px;
+						}
 					}
 				}
 			}
@@ -1786,7 +1800,7 @@ body.mobile-menu-box-active .header {
 .gm-style-iw {
 	background-color: #FFFFFF !important;
 	border-radius: 0 !important;
-	padding: 10px 20px 10px 10px !important;
+	padding: 16px !important;
 }
 
 /********************
